# Testes_IR

./: CMakeLists.txt  Envio_philco.c  Philco.c  README.md  Teste_protocolo.c  Tranmissor_e_receptor_IR.c  custom_ir.c  custom_ir.h  emissor.c  receptor.c
nec_receive_library/: CMakeLists.txt
